--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,20 +1,96 @@
 .sidebar {
     flex: 1;
+    min-height: 100vh;
+    background-color: white;
     border-right: 0.5px solid rgb(230, 227, 227);
-    
+
     .top {
         height: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        .logo{
+
+        .logo {
             font-weight: bold;
             font-size: 20px;
             color: rgb(85, 13, 153);
             text-transform: uppercase;
         }
     }
-    hr{
-        border : 0.5px solid rgb(230, 227, 227);
+
+    hr {
+        border: 0.5px solid rgb(230, 227, 227);
     }
+
+    .center {
+        padding-left: 10px;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+
+            .title {
+                font-size: 12px;
+                font-weight: bold;
+                margin-top: 15px;
+                margin-bottom: 5px;
+                text-transform: uppercase;
+            }
+
+            li {
+                display: flex;
+                align-items: center;
+                padding: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+
+                &:hover {
+                    background-color: #f6e8ff;
+                }
+
+                .icon {
+
+                    font-size: 18px;
+                    color: rgb(79 17 139);
+                }
+
+                span {
+                    font-size: 13px;
+                    font-weight: bold;
+                    color: rgb(51, 50, 50);
+                    margin-left: 5px;
+                }
+            }
+        }
+    }
+
+    .bottom {
+        display: flex;
+        margin: 10px;
+        align-items: center;
+        gap: 5px;
+        .colorOption {
+            width: 20px;
+            height: 20px;
+            border-radius: 5px;
+            border: 1px solid #7451f8;
+            cursor: pointer;
+
+            &:nth-child(1) {
+                background-color: whitesmoke;
+            }
+
+            &:nth-child(2) {
+                background-color: #333;
+            }
+
+            &:nth-child(3) {
+                background-color: darkblue;
+            }
+        }
+
+       
+    }
+
 }
