--- a/react-admin/src/components/Sidebar/Sidebar.scss
+++ b/react-admin/src/components/Sidebar/Sidebar.scss
@@ -41,7 +41,7 @@
             li {
                 display: flex;
                 align-items: center;
-                padding: 5px;
+                padding: 10px;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
 
@@ -52,7 +52,7 @@
                 .icon {
 
                     font-size: 18px;
-                    color: rgb(79 17 139);
+                    color: rgb(96, 31, 160);
                 }
 
                 span {
