--- a/fundamental/src/components/Ecommerce/Header.module.css
+++ b/fundamental/src/components/Ecommerce/Header.module.css
@@ -5,7 +5,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #007bff; 
+    background-color: #298bf3; 
     color: #fff;
     text-align: center;
     line-height: 20px; 
